# Mosquito

./: .gitignore  ArrayHelper.cpp  ArrayHelper.h  CMakeLists.txt  DB.cpp  DB.h  FileManager.cpp  FileManager.h  README.md  main.cpp  test.cpp
Exceptions/: QLSyntaxError.h
command/: Create.cpp  Create.h  Delete.cpp  Delete.h  Drop.cpp  Drop.h  Insert.cpp  Insert.h  Parser.cpp  Parser.h  Select.cpp  Select.h  Update.cpp  Update.h
operators/: array.cpp
types/: List.cpp  List.h  String.cpp  String.h  Varchar.cpp  Varchar.h  structures.cpp  structures.h
